s/Tor Status/Atlas/

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Tor Status Beta</title>
+    <title>Atlas</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
